# EDLib-4x4

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/: EnableGtests.cmake  FindEDLib.cmake
include/edlib-4x4/: CMakeLists.txt  DensityMatrix.h  DensityMatrixFunctions.h  PairingSusceptibility.h  StaticObservables.h
test/: CMakeLists.txt  DensityMatrix_Test.cpp
test/input/dimer/: generate_input.py  input.h5
test/input/plaquette/: generate_input.py  input.h5
